logs/service-error.log
/home/mgk/code/render-worker/scripts/services.sh: line 10: remotion: command not found
file:///home/mgk/code/render-worker/node_modules/uuid/dist/esm/v1.js:6
    const isV6 = options?._v6 ?? false;
                         ^

SyntaxError: Unexpected token '.'
    at Loader.moduleStrategy (internal/modules/esm/translators.js:133:18)
/home/mgk/code/render-worker/scripts/services.sh: line 10: remotion: command not found
/home/mgk/code/render-worker/scripts/services.sh: line 10: remotion: command not found
file:///home/mgk/code/render-worker/node_modules/uuid/dist/esm/v1.js:6
    const isV6 = options?._v6 ?? false;
                         ^

SyntaxError: Unexpected token '.'
    at Loader.moduleStrategy (internal/modules/esm/translators.js:133:18)
/home/mgk/code/render-worker/scripts/services.sh: line 10: remotion: command not found
file:///home/mgk/code/render-worker/node_modules/uuid/dist/esm/v1.js:6
    const isV6 = options?._v6 ?? false;
                         ^

SyntaxError: Unexpected token '.'
    at Loader.moduleStrategy (internal/modules/esm/translators.js:133:18)
/home/mgk/code/render-worker/scripts/services.sh: line 10: remotion: command not found
file:///home/mgk/code/render-worker/node_modules/uuid/dist/esm/v1.js:6
    const isV6 = options?._v6 ?? false;
                         ^

SyntaxError: Unexpected token '.'
    at Loader.moduleStrategy (internal/modules/esm/translators.js:133:18)
/home/mgk/code/render-worker/scripts/services.sh: line 10: remotion: command not found
file:///home/mgk/code/render-worker/node_modules/uuid/dist/esm/v1.js:6
    const isV6 = options?._v6 ?? false;
                         ^

SyntaxError: Unexpected token '.'
    at Loader.moduleStrategy (internal/modules/esm/translators.js:133:18)
/home/mgk/code/render-worker/scripts/services.sh: line 10: remotion: command not found
/home/mgk/code/render-worker/scripts/services.sh: line 10: remotion: command not found
file:///home/mgk/code/render-worker/node_modules/uuid/dist/esm/v1.js:6
    const isV6 = options?._v6 ?? false;
                         ^

SyntaxError: Unexpected token '.'
    at Loader.moduleStrategy (internal/modules/esm/translators.js:133:18)
/home/mgk/code/render-worker/scripts/services.sh: line 10: remotion: command not found
/home/mgk/code/render-worker/scripts/services.sh: line 10: remotion: command not found
file:///home/mgk/code/render-worker/node_modules/uuid/dist/esm/v1.js:6
    const isV6 = options?._v6 ?? false;
                         ^

SyntaxError: Unexpected token '.'
    at Loader.moduleStrategy (internal/modules/esm/translators.js:133:18)
/home/mgk/code/render-worker/scripts/services.sh: line 10: remotion: command not found
/home/mgk/code/render-worker/scripts/services.sh: line 10: remotion: command not found
file:///home/mgk/code/render-worker/node_modules/uuid/dist/esm/v1.js:6
    const isV6 = options?._v6 ?? false;
                         ^

SyntaxError: Unexpected token '.'
    at Loader.moduleStrategy (internal/modules/esm/translators.js:133:18)
/home/mgk/code/render-worker/scripts/services.sh: line 10: remotion: command not found
/home/mgk/code/render-worker/scripts/services.sh: line 10: remotion: command not found
file:///home/mgk/code/render-worker/node_modules/uuid/dist/esm/v1.js:6
    const isV6 = options?._v6 ?? false;
                         ^

SyntaxError: Unexpected token '.'
    at Loader.moduleStrategy (internal/modules/esm/translators.js:133:18)
/home/mgk/code/render-worker/scripts/services.sh: line 10: remotion: command not found
file:///home/mgk/code/render-worker/node_modules/uuid/dist/esm/v1.js:6
    const isV6 = options?._v6 ?? false;
                         ^

SyntaxError: Unexpected token '.'
    at Loader.moduleStrategy (internal/modules/esm/translators.js:133:18)
/home/mgk/code/render-worker/scripts/services.sh: line 10: remotion: command not found
file:///home/mgk/code/render-worker/node_modules/uuid/dist/esm/v1.js:6
    const isV6 = options?._v6 ?? false;
                         ^

SyntaxError: Unexpected token '.'
    at Loader.moduleStrategy (internal/modules/esm/translators.js:133:18)
/home/mgk/code/render-worker/scripts/services.sh: line 10: remotion: command not found
